--- a/templates/common/server.xml/040_threadpool_executor.erb
+++ b/templates/common/server.xml/040_threadpool_executor.erb
@@ -1,8 +1,7 @@
 
-    <Executor name="<%= @threadpool_name %>"<% if @threadpool_params_real and ! @threadpool_params_real.empty? %>
-             <%- @threadpool_params_real.each_pair do |attrib, value| -%>
-              <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == @threadpool_params_real.keys.last %> /><% end %>
-             <%- end -%>
-           <%- else -%>
- />
-           <%- end -%>
+    <Executor name="<%= @threadpool_name %>"<% -%>
+          <%- if @threadpool_params_real and ! @threadpool_params_real.empty? -%>
+            <%- @threadpool_params_real.each_pair do |attrib, value| %>
+              <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
+            <%- end -%>
+          <%- end %> />
