--- a/templates/common/server.xml/065_engine_valves.erb
+++ b/templates/common/server.xml/065_engine_valves.erb
@@ -1,11 +1,11 @@
 <%- if @engine_valves and ! @engine_valves.empty? -%>
-  <%- [@engine_valves].flatten.compact.each do |valve| %>
-    <%- valve.each_pair do |attrib, value| -%>
+  <%- [@engine_valves].flatten.compact.each do |valve| -%>
+    <%- valve.each_pair do |attrib, value| %>
       <%- if attrib == valve.keys.first -%>
-        <Valve <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == valve.keys.last %> /><% end %>
+      <Valve <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
       <%- else -%>
-               <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == valve.keys.last %> /><% end %>
+             <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
       <%- end -%>
-    <%- end -%>
+    <%- end %> />
   <%- end -%>
 <%- end -%>
