--- a/templates/common/server.xml/080_realms.erb
+++ b/templates/common/server.xml/080_realms.erb
@@ -1,31 +1,31 @@
 <%- @indent = "" -%>
 <%- if @combined_realm %>
       <Realm className="org.apache.catalina.realm.CombinedRealm">
-  <%- @indent = @indent + " " * 2 -%>
+  <%- @indent = @indent + "  " -%>
 <%- end -%>
 <%- if @lockout_realm %>
 <%= @indent %>      <Realm className="org.apache.catalina.realm.LockOutRealm">
-  <%- @indent = @indent + " " * 2 -%>
+  <%- @indent = @indent + "  " -%>
 <%- end -%>
 <%- if @userdatabase_realm -%>
 
 <%= @indent %>      <Realm className="org.apache.catalina.realm.UserDatabaseRealm"
 <%= @indent %>             resourceName="UserDatabase" />
-<% end -%>
+<%- end -%>
 <%- if @realms and ! @realms.empty? -%>
-  <%- [@realms].flatten.compact.each do |realm| %>
-    <%- realm.each_pair do |attrib, value| -%>
+  <%- [@realms].flatten.compact.each do |realm| -%>
+    <%- realm.each_pair do |attrib, value| %>
       <%- if attrib == realm.keys.first -%>
-<%= @indent %>      <Realm <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == realm.keys.last %> /><% end %>
+<%= @indent %>      <Realm <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
       <%- else -%>
-<%= @indent %>             <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == realm.keys.last %> /><% end %>
+<%= @indent %>             <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
       <%- end -%>
-    <%- end -%>
+    <%- end %> />
   <%- end -%>
 <%- end -%>
 <%- if @lockout_realm and @combined_realm %>
         </Realm>
-<%- elsif @lockout_realm -%>
+<%- elsif @lockout_realm %>
       </Realm>
 <%- end -%>
 <%- if @combined_realm %>
