--- a/templates/common/server.xml/053_connectors.erb
+++ b/templates/common/server.xml/053_connectors.erb
@@ -1,9 +1,9 @@
-<%- [@connectors].flatten.compact.each do |connector| %>
-  <%- connector.each_pair do |attrib, value| -%>
+<%- [@connectors].flatten.compact.each do |connector| -%>
+  <%- connector.each_pair do |attrib, value| %>
     <%- if attrib == connector.keys.first -%>
-    <Connector <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == connector.keys.last %> /><% end %>
+    <Connector <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
     <%- else -%>
-               <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == connector.keys.last %> /><% end %>
+               <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
     <%- end -%>
-  <%- end -%>
+  <%- end %> />
 <%- end -%>
