--- a/templates/common/server.xml/100_valves.erb
+++ b/templates/common/server.xml/100_valves.erb
@@ -7,13 +7,13 @@
                pattern="%h %l %u %t &quot;%r&quot; %s %b" />
 <% end -%>
 <%- if @valves and ! @valves.empty? -%>
-  <%- [@valves].flatten.compact.each do |valve| %>
-    <%- valve.each_pair do |attrib, value| -%>
+  <%- [@valves].flatten.compact.each do |valve| -%>
+    <%- valve.each_pair do |attrib, value| %>
       <%- if attrib == valve.keys.first -%>
-        <Valve <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == valve.keys.last %> /><% end %>
+        <Valve <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
       <%- else -%>
-               <%= attrib %>=<%= "#{value}".encode(:xml => :attr) %><% if attrib == valve.keys.last %> /><% end %>
+               <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
       <%- end -%>
-    <%- end -%>
+    <%- end %> />
   <%- end -%>
 <%- end -%>
