--- a/templates/instance/tomcat_init_generic.erb
+++ b/templates/instance/tomcat_init_generic.erb
@@ -17,14 +17,16 @@
 # Description: Release implementation for Servlet 2.5 and JSP 2.1
 # Short-Description: start and stop tomcat
 ### END INIT INFO
- 
+
 
 export CATALINA_BASE=<%= @catalina_base_real %>
 
 start() {
+  <% if @ulimit %>ulimit -n <%= @ulimit %>
+  <% end -%>
   <%= @start_command %>
 }
- 
+
 stop() {
   <%= @stop_command %>
 }
@@ -32,7 +34,7 @@ stop() {
 status() {
   <%= @status_command %>
 }
- 
+
 case $1 in
   start)
       start
@@ -48,4 +50,3 @@ case $1 in
       status
       ;;
 esac
-
