Delete empty lines

--- a/templates/common/server.xml/095_host_context.erb
+++ b/templates/common/server.xml/095_host_context.erb
@@ -1,8 +1,7 @@
-
   <%- if @host_context and ! @host_context.empty? -%>
-    <%- @host_context.each do |params| %>
+    <%- @host_context.each do |params| -%>
         <Context
-          <%- params.each_pair do |attrib, value| %>
+          <%- params.each_pair do |attrib, value| -%>
             <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
           <%- end -%>
     <%- end %>/>
