Correct syntax error

--- a/templates/common/server.xml/095_host_context.erb
+++ b/templates/common/server.xml/095_host_context.erb
@@ -6,5 +6,6 @@
         <%- else -%>
                  <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
         <%- end -%>
-    <%- end %>/>
+      <%- end %>/>
+    <%- end %>
   <%- end %>
