--- a/templates/instance/tomcat_init_generic.erb
+++ b/templates/instance/tomcat_init_generic.erb
@@ -12,8 +12,8 @@
 # Provides: tomcat
 # Required-Start: $network $syslog
 # Required-Stop: $network $syslog
-# Default-Start:
-# Default-Stop:
+# Default-Start: 2 3 4 5
+# Default-Stop: 0 1 6
 # Description: Release implementation for Servlet 2.5 and JSP 2.1
 # Short-Description: start and stop tomcat
 ### END INIT INFO
