--- a/templates/common/server.xml/091_hosts.erb
+++ b/templates/common/server.xml/091_hosts.erb
@@ -1,6 +1,6 @@
 <%- @hosts.each do |host| %>
   <%- host.each_pair do |attrib, value| -%>
-    <%- if ! ['valves', 'contexts'].include? attrib -%>
+    <%- if ! ['valves', 'contexts', 'aliases'].include? attrib -%>
       <%- if attrib == host.keys.first -%>
       <Host <%= attrib %>=<%= "#{value}".encode(:xml => :attr) -%>
       <%- else %>
